--- a/frontend/src/templates/chat.html
+++ b/frontend/src/templates/chat.html
@@ -32,8 +32,8 @@
             </div>
           </div>
           <div class="flex gap-2">
-            <button id="view-profile-btn" class="btn-green">View Profile</button>
-            <button id="block-user-btn" class="btn-pink">Block User</button>
+            <button id="view-profile-btn" class="btn-green" data-i18n="chat.viewProfile">View Profile</button>
+            <button id="block-user-btn" class="btn-pink" data-i18n="chat.blockUser">Block User</button>
           </div>
         </div>
 
