fix: update placeholder for 2FA code input field to '000000'

--- a/frontend/src/templates/edit.html
+++ b/frontend/src/templates/edit.html
@@ -58,7 +58,7 @@
               type="text"
               id="disable-password"
               class="form-input"
-              placeholder="6-digit code from your authenticator app"
+              placeholder="000000"
               maxlength="6"
             />
           </div>
