refactor: rename enable 2FA button ID for clarity and security: enhance temp token management in login process

--- a/frontend/src/templates/edit.html
+++ b/frontend/src/templates/edit.html
@@ -127,7 +127,7 @@
               />
             </div>
             <div class="flex gap-2">
-              <button id="enable-2fa-btn" class="flex-1 btn-green">Enable 2FA</button>
+              <button id="enable-2fa-modal-btn" class="flex-1 btn-green">Enable 2FA</button>
             </div>
           </div>
 
